@@ -42,6 +42,7 @@ makecvm() {
 }
 
 fixdir() { sed -e 's/^\(d.*\)    [123456789][0123456789] /\1  4096 /'; }
+fixbytes() { sed -e 's/[0123456789]* bytes /### bytes /'; }
 
 anon() { echolines "$@" | $env $src/twoftpd-anon 2>/dev/null | fixdir | tail -n +2; }
 drop() { echolines "$@" | $env $src/twoftpd-drop 2>/dev/null | fixdir | tail -n +2; }
