@@ -1,0 +1,20 @@
+<requires home>
+<loop mode pasv port>
+for i in $( seq 10000 ); do
+  echo 012345678901234567890123456789012345678901234567890123456789012
+done >$home/testfile
+xfertest xfer $mode retr bin 64 'RETR testfile' | fixbytes
+rm $home/testfile
+<!----------------------------------------------------------------------------->
+<result pasv>
+200 Transfer mode changed to BINARY.^M
+227 Entering Passive Mode (#,#,#,#,#,#).^M
+150 Opened data connection.^M
+012345678901234567890123456789012345678901234567890123456789012
+426 File send interrupted (### bytes sent).^M
+<result port>
+200 Transfer mode changed to BINARY.^M
+200 OK.^M
+150 Opened data connection.^M
+012345678901234567890123456789012345678901234567890123456789012
+426 File send interrupted (### bytes sent).^M
