@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 1.31
 
+- Improved reporting of interrupted transfers.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
